--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ footer {
     color: #ddd;
     font-family: 'Roboto' , sans-serif;
     /* position: static; */
-    width: 100%;
+    /* width: 100%; */
     bottom: 0;
 }
 
